<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Talk TO-DO</string>
    <string name="add_task">Add Task</string>
    <string name="add">Add</string>
    <string name="new_task_hint">new task...</string>
    <string name="remove_listitem">Remove</string>
    <string name="done">Done</string>
    <string name="myname">myName</string>
    <string name="new_task_title">Title</string>
    <string name="new_task_description">Description</string>
    <string name="new_task_date">Date</string>
    <string name="open_date_dialog">open date dialog</string>
    <string name="new_task_time">Time</string>
    <string name="click_on_the_icon">click on the icon</string>
    <string name="open_time_dialog">open time dialog</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="not_top_image">not top image</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_todel">TODEL</string>
    <string name="task_title_hint">Task Title</string>
    <string name="task_description_hint">Task Description</string>
    <string name="from_title">FROM</string>
    <string name="to_title">TO</string>
    <string name="accept">accept</string>
    <string name="cancel_btn">cancel_btn</string>
    <string name="note_top_image">note_top_image</string>
    <string name="remind_me">Remind Me</string>
    <string name="fetch_task">fetch_task</string>
    <string name="title_activity_calander">Calander</string>

</resources>