<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/note_top_image"
        android:scaleType="fitXY"
        android:src="@drawable/note_top" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/note_back"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/cancel_btn"
                android:src="@drawable/cancel_button" />
			
            <ImageButton
                android:id="@+id/btnAccept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/accept"
                android:src="@drawable/accept_button" />
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp" >

                <EditText
                    android:id="@+id/etAddTaskTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:hint="@string/task_title_hint"
                    android:inputType="text"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/etAddTaskDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:hint="@string/task_description_hint"
                    android:inputType="textMultiLine"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/addTaskFromLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:text="@string/from_title"
                        android:textColor="@android:color/secondary_text_light" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <com.liorginsberg.talktodo.CustomEditText
                            android:id="@+id/spDateFrom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:clickable="true"
                            android:gravity="center_horizontal"
                            android:textColor="#000000" />

                        <com.liorginsberg.talktodo.CustomEditText
                            android:id="@+id/spTimeFrom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:gravity="center_horizontal"
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/addTaskToLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:text="@string/to_title"
                        android:textColor="@android:color/secondary_text_light" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <com.liorginsberg.talktodo.CustomEditText
                            android:id="@+id/spDateTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:clickable="true"
                            android:gravity="center_horizontal"
                            android:textColor="#000000" />

                        <com.liorginsberg.talktodo.CustomEditText
                            android:id="@+id/spTimeTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:gravity="center_horizontal"
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="1"
                        android:text="@string/remind_me"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000" />

                    <CheckBox
                        android:id="@+id/chbRemindMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:button="@drawable/custom_checkbox" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageButton
                        android:id="@+id/btnFetch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@string/fetch_task"
                        android:src="@drawable/fetch_button" />

                    <ProgressBar
                        android:id="@+id/pbFetch"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="20dp"
                        android:visibility="invisible" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>